fixed alignments and stylings

--- a/client/src/components/Settings/Form/Uploader.module.css
+++ b/client/src/components/Settings/Form/Uploader.module.css
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 1.4rem;
+  font-size: 1.8rem;
   font-weight: 500;
   cursor: pointer;
 }
